# acytel-v2

./: .gitignore  README.md  auth_frontend_overview.txt  auth_overview.txt  combined_output.txt  combined_output2.txt  cors.json  docker-compose.yml  generate-token.js  package-lock.json  package.json  project_structure.txt  project_structure6.txt  project_structuree.txt
backend/: .env  package-lock.json  package.json  tsconfig.json
backend/scripts/: backfill-typesense.ts
backend/src/: index.ts
backend/src/config/: passport.ts
backend/src/controllers/: auth.controller.ts  playlist.controller.ts  track.controller.ts  user.controller.ts
backend/src/core/: database.ts  search.ts  storage.ts
backend/src/middleware/: auth.middleware.ts  rateLimiter.middleware.ts
backend/src/models/: playlist.ts  track.ts  user.ts
backend/src/routes/: auth.routes.ts  playlist.routes.ts  track.routes.ts  user.routes.ts
backend/src/services/: search.service.ts  track.service.ts
backend/src/types/express/: index.d.ts
backend/src/utils/: logger.ts
frontend/acytel_frontend/: .env  .gitignore  build.sh  index.html  package-lock.json  package.json  pnpm-lock.yaml  postcss.config.cjs  postcss.config.js  project_structure.txt  tailwind.config.cjs  tailwind.config.js  tsconfig.json  vite.config.ts
frontend/acytel_frontend/public/: audio-processor.js
frontend/acytel_frontend/src/: App.tsx  index.tsx
frontend/acytel_frontend/src/app/: App.tsx  index.tsx
frontend/acytel_frontend/src/audio-engine/: Cargo.toml
frontend/acytel_frontend/src/audio-engine/src/: lib.rs
frontend/acytel_frontend/src/components/: Layout.tsx  ProtectedRoute.tsx
frontend/acytel_frontend/src/core/: audio.service.ts  particles.ts  wasm-loader.ts
frontend/acytel_frontend/src/models/: playlist.ts  track.ts
frontend/acytel_frontend/src/pages/: AddTrackPage.tsx  AuthPage.tsx  HomePage.module.css  HomePage.tsx  MainApplicationPage.tsx  OAuthCallbackPage.tsx  WelcomePage.module.css  WelcomePage.tsx
frontend/acytel_frontend/src/services/: api.ts  audio.service.ts  auth.service.ts  (+4 more)
scripts/: migrations.cql
services/streamer/: .env  Cargo.toml
services/streamer/src/: main.rs
(+89 files in other folders)
