[package]
name = "streamer"
version = "0.1.0"
edition = "2024"

[dependencies]
tokio = { version = "1", features = ["full"] }
tower-http = { version = "0.5.0", features = ["fs", "cors"] }
axum = "0.7"
# New dependencies for dynamic streaming
jsonwebtoken = "9"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
aws-config = "1.1.7"
aws-sdk-s3 = "1.17.0"
aws-smithy-http = "0.60.0"
dotenvy = "0.15"
axum-macros = "0.4.1"
futures = "0.3"
tokio-util = { version = "0.7", features = ["io"] }
