[package]
name = "streamer"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { version = "1", features = ["full"] }
axum = "0.7"
tower-http = { version = "0.5.0", features = ["fs", "cors"] }
jsonwebtoken = "9"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
aws-config = "1.1.7"
aws-sdk-s3 = "1.17.0"
aws-smithy-http = "0.60.0"
dotenvy = "0.15"
axum-macros = "0.4.1"
tokio-util = { version = "0.7", features = ["io"] }
# --- THIS IS THE CORRECTED LINE ---
aws-smithy-runtime = "1.1.8" 

[profile.release]
lto = true
opt-level = 'z'