[package]
name = "audio-engine"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib"]

[dependencies]
wasm-bindgen = "0.2"
js-sys = "0.3"
web-sys = { version = "0.3", features = ["console"] }
symphonia = { version = "0.5", default-features = false, features = ["all-formats", "all-codecs", "mp3"] }
console_error_panic_hook = "0.1"